# LLM-HypatiaX-PAPERS-Public

./: .gitignore  Dockerfile  LICENSE  README.md  jmlr_paper_main_r3.tex  requirements.txt  supp_benchmark_report.tex
papers/2025-JMLR/: README.md  activate_hypatiax.sh  pyproject.toml  requirements.txt  setup_environment.sh
papers/2025-JMLR/docs/: REPRODUCTION_GUIDE.md
papers/2025-JMLR/hypatiax/: README.md  __init__.py  path.py
papers/2025-JMLR/hypatiax/analysis/: statistical_analysis_full.py  statistical_analysis_unified.py
papers/2025-JMLR/hypatiax/core/base_pure_llm/: baseline_pure_llm.py  baseline_pure_llm_defi.py  baseline_pure_llm_defi_discovery.py
papers/2025-JMLR/hypatiax/core/training/: adaptive_config.py  baseline_neural_network.py  baseline_neural_network_defi.py  baseline_neural_network_defi_improved.py
papers/2025-JMLR/hypatiax/experiments/benchmarks/: run_comparative_suite_benchmark_v2.py  run_dual_condition_benchmark.py  run_dual_sweep_benchmarks.py  run_hybrid_system_benchmark.py  run_noise_sweep_benchmark.py  run_sample_complexity_benchmark.py  snells_law_discovery.py
papers/2025-JMLR/hypatiax/experiments/comparison/: merge_all_systems.py  test_suite_comparative_v3.py  ultimate_comparative_suite_complete_.py
papers/2025-JMLR/hypatiax/experiments/tests/: extrapolation_test_protocol.py  run_tests.py  test_enhanced_defi_extrapolation.py  (+2 more)
papers/2025-JMLR/hypatiax/notebooks/: 01_data_generation.ipynb  02_pure_llm_experiments.ipynb  03_hybrid_experiments.ipynb  04_extrapolation_analysis.ipynb  05_figure_generation.ipynb  06_statistical_tests.ipynb  README.md
papers/2025-JMLR/hypatiax/protocols/: experiment_protocol_all_18_a.py  experiment_protocol_all_30.py  experiment_protocol_benchmark.py  experiment_protocol_benchmark_v2.py  experiment_protocol_comparative.py  experiment_protocol_defi.py  experiment_protocol_defi_20.py
(+176 files in other folders)
