[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypatiax"
version = "1.0.0"
description = "HypatiaX: AI-Driven Formula Discovery with LLM - JMLR 2025"
authors = [
    {name = "Ruperto Pedro Bonet Chaple", email = "ruperto.bonet@modelphysmat.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
# Full NLP features (optional for formula discovery experiments)
nlp = [
    "spacy>=3.7.0,<4.0",
    "nltk>=3.8.0,<4.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

# All optional dependencies
all = [
    "hypatiax[nlp,dev]"
]

[project.urls]
Homepage = "https://github.com/sednabcn/LLM-HypatiaX-PAPERS"
Repository = "https://github.com/sednabcn/LLM-HypatiaX-PAPERS"
"Bug Tracker" = "https://github.com/sednabcn/LLM-HypatiaX-PAPERS/issues"
Documentation = "https://github.com/sednabcn/LLM-HypatiaX-PAPERS/tree/main/papers/2025-JMLR"

[project.scripts]
# Add any command-line scripts here if needed
# example: hypatiax-experiment = "hypatiax.protocols.run_experiment:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypatiax*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.csv", "*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["hypatiax"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"
